--- a/css/main.css
+++ b/css/main.css
@@ -2095,16 +2095,52 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-	background: #313131 url(../images/bg.jpg) no-repeat center;
+	background: #FFFFFF url(../images/bg.jpg) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
 	padding-top: 12rem;
 	padding-bottom: 12rem;
-	color: white;
+	color: rgb(0, 0, 0);
 	position: relative;
 }
 #services .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #FFFFFF;
+	opacity: .6;
+}
+
+#services .section-intro {
+	margin-bottom: 1.8rem;
+}
+
+#services .section-intro h1 {
+	color: rgb(0, 0, 0);
+}
+#services .section-intro h5 {
+	color: #FF0077;
+}
+#services .section-intro p {
+	color: rgb(0, 0, 0);
+}
+
+
+
+#mediaf {
+	background: #313131 url(../images/portfolio/applePake.jpeg) no-repeat center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	padding-top: 8rem;
+	padding-bottom: 5rem;
+	color: white;
+	position: relative;
+}
+#mediaf .overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -2114,19 +2150,62 @@ header .logo a {
 	opacity: .9;
 }
 
-#services .section-intro {
+#mediaf  img {
+	
+	
+	height: 100px;
+	position: relative;
+	padding-bottom: 3rem;
+}
+
+#mediaf .section-intro {
 	margin-bottom: 1.8rem;
 }
 
-#services .section-intro h1 {
+#mediaf .section-intro h1 {
 	color: white;
 }
-#services .section-intro h5 {
+#mediaf .section-intro h5 {
 	color: #FF0077;
 }
-#services .section-intro p {
+#mediaf .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
 }
+
+
+.mediaf-content {
+	max-width: 1200px;
+}
+.mediaf-list {
+	margin-top: 1.2rem;
+	text-align: center;
+}
+.mediaf-list .service {
+	margin-bottom: 1.2rem;
+	padding: 0 30px;
+}
+.mediaf-list .icon {
+	display: inline-block;
+	margin-bottom: 2.1rem;
+}
+.mediaf-list .icon i {
+	font-size: 5.4rem;
+	color: #FF0077;
+}
+.mediaf-list h3 {
+	color: #FFFFFF;
+}
+.mediaf-list .desc {
+	color: rgba(255, 255, 255, 0.6);
+}
+
+
+
+
+
+
+
+
 .services-content {
 	max-width: 1200px;
 }
@@ -2147,10 +2226,10 @@ header .logo a {
 	color: #FF0077;
 }
 .services-list h3 {
-	color: #FFFFFF;
+	color:rgb(0, 0, 0);;
 }
 .services-list .desc {
-	color: rgba(255, 255, 255, 0.6);
+	color: rgba(0, 0, 0, 0.6);
 }
 
 /* pagination */
